# gee

./: CHANGELOG.md  README.md
.github/workflows/: unit-tests.yml
docs/: Design.md  README.md  What is a WSGI.md  quickstart.md
examples/static-site/: README.md  gee.toml  ignore-me  index.html
gee/: .gitignore  Cargo.toml
gee/src/: application.rs  config.rs  environ.rs  macros.rs  main.rs  server.rs
gee/src/cli/: cli.rs  mod.rs
gee/src/downstream/: application.rs  file.rs  mod.rs
gee/src/fixtures/: test_config_invalid_00.toml  test_config_valid_00.toml  test_config_valid_01.toml  test_config_valid_02.json  test_config_valid_03.yaml
gee/src/fixtures/app/: app.py
gee/src/handlers/: mod.rs  static_service.rs
gee/src/handlers/python/: file.rs
gee/src/server/: mod.rs  server.rs  service.rs  service_builder.rs
gee/src/services/: mod.rs
gee/src/services/file_service/: config.rs  service.rs
gee/src/services/python_service/: application.rs  config.rs  environ.rs
gee/src/services/route_service/: config.rs
gee/src/upstream/: server.rs  service.rs  service_builder.rs
site/: .gitignore  README.md  app.py  package-lock.json  package.json  tailwind.config.js
site/backend/: .gitignore
site/frontend/: package-lock.json  package.json
site/static/: output.css
site/templates/: 404.html  base.html  docs.html  home.html  page.html
test/test_application/static/: sample.json
