[package]
name = "gee"
description = "Static server and Python WSGI."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
pyo3 = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
